style.css
@font-face {
    font-family: Bebas Neue Regular;
    src: url("font/BebasNeue/BebasNeue-Regular.ttf");
    font-weight: normal;
}

@font-face {
    font-family: Simplifica;
    src: url("font/Simplifica.ttf");
    font-weight: normal;
}

html {
    scroll-behavior: smooth;
    height: -webkit-fill-available;
}

html, body {
    margin: 0;
}

body { /* For iPhone notch */
    background-color: #292929;
    padding:
            env(safe-area-inset-top)
            env(safe-area-inset-right)
            env(safe-area-inset-bottom)
            env(safe-area-inset-left);
    min-height: 100vh;
    /* mobile viewport bug fix */
    min-height: -webkit-fill-available;
}

/*
TODO:
 * Mobile navbar should be closed 
 */

.section-container {
    min-width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center; /* centered along main axis (vertically) */
    align-items: center; /* centered along main axis (horizontally) */
}

.non-title-container {
    padding: max(30px, 3vh) 20vw;
    /* This allows the total size of the element to remain constant. So, if you
    increase the padding, the size of the actual element decreases */
    box-sizing: border-box;
}

#home {
    min-height: 100vh;
    background-color: #292929;
}

.title-page {
    width: 100%;
    left: 0;
    text-align: center;
}

#intro {
    margin-top: 0;
    margin-bottom: 0;
    font-family: Simplifica, sans-serif;
    color: white;
    font-size: clamp(3rem, 3rem + 1vw, 6rem);
}

h1 {
    font-family: Bebas Neue Regular, sans-serif;
    letter-spacing: 0.3vw;
    font-size: clamp(10rem, 10rem + 3vw, 20rem);
    color: #DB162F;
    margin-top: 0;
    margin-bottom: 0;
}

.logos {
    color: white;
    font-size: clamp(3rem, 3rem + 1vw, 5rem);
    padding: 0 10px 20px 10px;
}

#arrow-box {
    position: absolute;
    bottom: 0;
    left: 6.5vw;
    background-color: white;
    width: max(6vw, 100px);
    height: calc(0.6 * max(6vw, 100px)); /* To preserve aspect ratio */
    display: flex;
    justify-content: center;
    align-items: center;
}

#navbar-header {
    display: none;
}

#arrow-down {
    color: black;
    font-size: clamp(2rem, 1.5rem + 0.2vw, 4rem);
    position: absolute;
}

#navbar {
    background-color: #292929;
    width: max(6vw, 100px);
    display: flex;
    flex-direction: column;
    text-align: center;
    font-family: Bebas Neue Regular, sans-serif;
    font-size: clamp(1.5rem, 1.5rem + 0.2vw, 3rem);
}

/* Need to be more specific to override a:link */
#navbar a.navbar-link {
    width: max(6vw, 100px);
    color: white;
    height: calc(0.6 * max(6vw, 100px)); /* To preserve aspect ratio */
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.active-navbar-link {
    background-color: white;
}

#navbar a.active-navbar-link {
    color: black;
}

#navbar a.active-navbar-link:hover {
    color: darkgray;
}

#navbar a.navbar-link:hover {
    color: darkgray;
}

/* Both below are for the navbar */

.absolute {
    position: absolute;
    top: 100vh;
    left: 6.5vw;
}

.sticky {
    position: fixed;
    top: calc(0.6 * max(6vw, 100px) + 20px);
    left: 6.5vw;
}

.fixed-mobile {
    display: fixed;
}

#about {
    background-color: lightgray;
}

h2 {
    margin: 0 0 0 0;
    font-family: Bebas Neue  Regular, sans-serif;
    letter-spacing: 0.3vw;
    font-size: clamp(4rem, 4rem + 2vw, 10rem);
    text-align: center;
}

#about-title {
    color: #DB162F;
}

#about-img {
    text-align: center;
}

#about-grid {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-gap: 1vw;
    margin-top: 3vh;
    /*margin: 3vh 0 3vh 0;*/
    min-width: 350px;
    max-width: 60vw;
}

#portrait {
    min-height: 300px;
    height: 55vh;
    max-height: 7360px;
    width: auto;
}

.content {
    font-family: 'Poppins', sans-serif;
    font-size: clamp(1rem, 1rem + 0.5vw, 3rem);
    margin-top: 0;
    padding: 0 25px 0 25px;
}

#education {
    background-color: darkgray;
}

#education-title {
    color: #292929;
}

.course-container {
    background-color: white;
    padding-right: 20px;
}

#courses {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: 1vw;
    margin: 3vh 0 3vh 0;
    min-width: 300px;
    max-width: 60vw;
    font-family: 'Poppins', sans-serif;
    font-size: clamp(1rem, 1rem + 0.3vw, 2rem);
}

.course-title {
    padding-left: 20px;
}

a {
    text-decoration: none;
}

a:link, a:visited {
    color: black;
}

a:hover {
    color: #DB162F;
}

li {
    padding-right: 15px;
}

#experience {
    background-color: #DB162F;
}

#experience-title {
    color: white;
}

.experience-box {
    margin: 2vh 0 2vh 0;
    min-width: 300px;
    width: 55vw;
    background-color: white;
    font-family: 'Poppins', sans-serif;
    font-size: clamp(1rem, 1rem + 0.3vw, 2rem);
}

.experience-tab {
    background-color: darkgray;
    padding: 1vh 1vw 1vh 1vw;
    color: black;
    display: grid;
    grid-template-columns: minmax(250px, 1.5fr) minmax(220px, 1fr);
    grid-template-rows: repeat(2, minmax(10px, 1fr));
}

.experience-right {
    text-align: right;
}


#projects {
    background-color: darkgray;
}

#projects-title {
    color: #292929;
}

.projects-tab {
    background-color: #292929;
    padding: 1vh 1vw 1vh 1vw;
    color: white;
}

a.projects-tab-text:link, a.projects-tab-text:visited {
    color: white;
}

a.projects-tab-text:hover {
    color: #DB162F;
}

#fencing {
    background-color: lightgray;
    min-height: 100vh;
    justify-content: flex-start;
}

#fencing-title {
    color: #DB162F;
}

.video-container {
    position: relative;
    overflow: hidden;
    width: 55vw;
    min-width: 300px;
    padding-top: max(169px, 31vw); /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
  }
  
  /* Then style the iframe to fit in the container div with full height and width */
.responsive-iframe {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
  }


#fencing-info {
    min-width: 300px;
    width: 55vw;
    text-align: center;
    margin-bottom: 50px;
}

/* For the coursework section */
@media screen and (max-width: 1260px) {
    #about-grid {
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        /* grid-template-rows: repeat(2, minmax(325px, 1fr)); */
        grid-gap: 1vh;
    }
    .content {
        text-align: center;
    }
}

/* For the experience section */
@media screen and (max-width: 1100px) {
    .experience-tab {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(4, auto);
    }

    .experience-right {
        text-align: left;
    }
}

/* For the navbar */
@media screen and (max-width: 800px) {
    #arrow-box {
        position: static;
        width: 100%;
    }

    #home-content {
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    #home {
        height: 100%;
        height: -moz-available; /* WebKit-based browsers will ignore this. */
        height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
        height: fill-available;
    }

    #fencing {
        min-height: calc(100vh - 50px);
    }

    #navbar-header {
        display: flex;
        position: -webkit-sticky;
        position: sticky;
        top: 0;
        width: 100%;
        height: 50px;
        background-color: #292929;
    }

    #navbar-button {
        background-color: transparent;
        border: none;
    }

    #navbar-button-logo {
        color: white;
        font-size: 1.5rem;
    }
    
    #navbar {
        display: none;
        position: sticky;
        width: 100%;
        left: 0;
        top: 50px;
        z-index: 1;
    }

    #navbar a.navbar-link {
        width: 100%;
    }

    #about, #education, #experience, #projects, #fencing {
        scroll-margin-top: 50px;
    }
}

/* Change the padding of the section containers to be much thinner */
@media screen and (max-width: 500px) {
    .non-title-container {
        padding: max(30px, 3vh) 30px;
    }
}

